--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ Icon
 # Thumbnails
 ._*
 
+# Idea
+.idea/
+
 # Built application files
 *.apk
 *.ap_
@@ -37,3 +40,7 @@ proguard/
 
 # Log Files
 *.log
+
+# Additional
+*.iml
+*.properties
