--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="17"
-        android:targetSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="19"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
